Add create model function

--- a/Smoking and drinking classification/check.ipynb
+++ b/Smoking and drinking classification/check.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,8 +200,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Далее создадим классификационные модели на основе полученных ранее оптимальных параметров при кросс-валидации. Сперва импортируем все необходимые компоненты:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,10 +218,96 @@
     "from sklearn.tree import DecisionTreeClassifier\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.ensemble import AdaBoostClassifier\n",
-    "from xgboost import XGBClassifier\n",
+    "#from xgboost import XGBClassifier\n",
     "from sklearn.ensemble import StackingClassifier\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.pipeline import Pipeline"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Далее создадим функцию, благодаря которой будет создан классификатор на основе введённого в неё алгоритма. На вход данная функция будет получать алгоритм классификации с введёнными в него параметрами, а на выходе будет получаться полностью обученные классификатор. Программный код разработанной функции представлен ниже:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def create_model(alg, alg_name, x_train, y_train):\n",
+    "    print(\"Обучение модели...\")\n",
+    "    # Создаем стандартизатор\n",
+    "    standardizer = StandardScaler()\n",
+    "\n",
+    "    # Создаём конвейер\n",
+    "    pipe = Pipeline([(\"standardizer\", standardizer), (alg_name, alg)])\n",
+    "\n",
+    "    clf = pipe.fit(x_train, y_train)\n",
+    "    print(\"Обучение завершено!\")\n",
+    "    return clf\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Далее определим словарь, в котором ключем будет являться название метода классификации, а значением - сам метод классификации."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Для стака моделей\n",
+    "estimators = [\n",
+    "    ('forest', RandomForestClassifier(n_jobs=-1, n_estimators=793, random_state=42, max_depth=14, max_features=12, min_samples_leaf=17)),\n",
+    "    ('lr', LogisticRegression(solver='saga', n_jobs=-1, C=1.6, l1_ratio=0.60, penalty=\"elasticnet\"))\n",
+    "]\n",
+    "\n",
+    "algs = {\n",
+    "    'k-nearest neighbors': KNeighborsClassifier(n_jobs=-1, metric='manhattan', n_neighbors=14),\n",
+    "    'support vector machine': LinearSVC(max_iter=10000, C=1.5, loss=\"squared_hinge\", tol=0.005001),\n",
+    "    'logistic regression': LogisticRegression(solver=\"saga\", n_jobs=-1, C=4.972235551967773, l1_ratio=0.00387986251009187, penalty='elasticnet'),\n",
+    "    'decision tree': DecisionTreeClassifier(min_samples_leaf=50, criterion='log_loss', max_depth=10, max_features=23),\n",
+    "    'random forest': RandomForestClassifier(n_jobs=-1, n_estimators=793, max_depth=12, max_features=12, min_samples_leaf=17),\n",
+    "    'adaptive boost': AdaBoostClassifier(learning_rate=0.5, n_estimators=159),\n",
+    "    #'gradiend boost': XGBClassifier(random_state=42, colsample_bylevel=0.9452050650024018, colsample_bynode=1.0, colsample_bytree=1.0, gamma=5.966638612389175,\n",
+    "    #                                learning_rate=0.08893704430415869, max_depth=17, reg_alpha=20.0, reg_lambda=0.0, subsample=1.0),\n",
+    "    'stacked model': StackingClassifier(estimators=estimators, final_estimator=DecisionTreeClassifier(min_samples_leaf=10)),\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Далее в цикле пройдемся по всем элементам данного словаря и сперва создадим классификатор, а затем оценим его точность."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Работа с k-nearest neighbors\n",
+      "Обучение модели...\n"
+     ]
+    }
+   ],
+   "source": [
+    "for name, alg in algs.items():\n",
+    "    print(f'Работа с {name}')\n",
+    "    clf = create_model(alg, name, x_train, y_train)\n",
+    "    evaluate_model(clf, x_test, y_test, name)"
    ]
   }
  ],
