--- a/Smoking and drinking classification/check.ipynb
+++ b/Smoking and drinking classification/check.ipynb
@@ -9,7 +9,9 @@
     "\n",
     "* [Подготовка данных](#1)\n",
     "* [Сравнение моделей](#2)\n",
-    "    * [Теоретические основы](#21)\n"
+    "    * [Теоретические основы](#21)\n",
+    "    * [Практическая реализация](#22)\n",
+    "* [Тестирование финальной модели](#3)\n"
    ]
   },
   {
@@ -183,23 +185,23 @@
     "\n",
     "def evaluate_model(model, x_test, y_test, model_name: str) -> None:\n",
     "    print('Получение предсказаний...')\n",
-    "    pred_proba = model.predict_proba(x_test)\n",
+    "    pred_proba = model.predict(x_test)\n",
     "    xs = np.linspace(0, 1, 50)\n",
     "    a = ['PiYG', 'PRGn', 'BrBG', 'PuOr', 'RdGy', 'RdBu', 'RdYlBu', 'RdYlGn', 'Spectral', 'coolwarm', 'bwr', 'seismic']\n",
     "    color = np.random.choice(a)\n",
     "    print('Построение графиков...')\n",
     "    with plt.xkcd():\n",
     "        fig, (ax1, ax2) = plt.subplots(1, 2, figsize=(15, 7))\n",
-    "        ConfusionMatrixDisplay.from_predictions(y_test, pred_proba[:,1], ax=ax1, normalize='true', cmap=color).ax_.set_title(f'Confusion matrix of {model_name}')\n",
-    "        RocCurveDisplay.from_predictions(y_test, pred_proba[:,1], ax=ax2, color='black').ax_.set_title(f'ROC Curve of {model_name}')\n",
+    "        ConfusionMatrixDisplay.from_predictions(y_test, pred_proba, ax=ax1, cmap=color).ax_.set_title(f'Confusion matrix of {model_name}')\n",
+    "        RocCurveDisplay.from_predictions(y_test, pred_proba, ax=ax2, color='black').ax_.set_title(f'ROC Curve of {model_name}')\n",
     "        ax2.plot(xs, xs)\n",
     "\n",
     "    plt.show()\n",
     "    vals = f'''Оценивание модели {model_name} по параметрам:\n",
-    "    Полнота (Recall): {recall_score(y_test, pred_proba[:,1]):.4f},\n",
-    "    Точность (Precision): {precision_score(y_test, pred_proba[:,1]):.4f},\n",
-    "    F1-мера (F1-score): {f1_score(y_test, pred_proba[:,1]):.4f},\n",
-    "    Площадь под ROC-кривой (AUC ROC): {roc_auc_score(y_test, pred_proba[:,1]):.4f}'''\n",
+    "    Полнота (Recall): {recall_score(y_test, pred_proba):.4f},\n",
+    "    Точность (Precision): {precision_score(y_test, pred_proba):.4f},\n",
+    "    F1-мера (F1-score): {f1_score(y_test, pred_proba):.4f},\n",
+    "    Площадь под ROC-кривой (AUC ROC): {roc_auc_score(y_test, pred_proba):.4f}'''\n",
     "    print(vals)"
    ]
   },
@@ -263,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -557,6 +559,216 @@
     "    clf = create_model(alg, name, x_train, y_train)\n",
     "    evaluate_model(clf, x_test, y_test, name)\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Тестирование финальной модели <a id=\"3\"></a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "В качестве вывода к предыдущему этапу было получено, что наилучшей точностью классификации обладает модель градиентного бустинга, со значением по метрике ROC AUC равной 0,7412. Поскольку лучший результат, который может быть получен метрикой AUC ROC = 1, а худший = 0.5 (классификатор работает на случайном угадывании), то точка 0,75 является ровно серединой между двумя крайностями. Однако полученная точность является достаточно средним показателем, который можно попробовать оптимизировать."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "При оптимизации точности классификации могут применяться несколько основных шагов, такие как:\n",
+    "1) **Feature Engineering**: создание новых признаков, удаление ненужных, использование методов отбора признаков;\n",
+    "2) **Оптимизация гиперпараметров**: расширение диапазона параметров, использование оптимизированных методов подбора параметров;\n",
+    "3) **Ансамблирование моделей**;\n",
+    "4) **Балансировка классов**;\n",
+    "5) **Обработка данных**: нормализация и стандартизация, удаление пропусков, избавление от выбросов;\n",
+    "6) **Улучшение модели**: применение комплексных моделей, использование глубокого обучения;\n",
+    "\n",
+    "Из приведённого выше списка в рамках данной работы остались не рассмотренными еще 2 способа: методы отбора признаков и методы глубокого обучения. И в качестве перспективы на будущее эти методы могут улучшить качество классификации, однако насколько это поможет - неизвестно."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Далее, перейдем к тестированию наилучшей модели - а именно попробуем на вход подать её данные 1 реального пациента и посмотрим, с какими вероятностями она классифицирует данного пациента по классам. Для этого снова создадим классификационную модель с использованием градиентного бустинга, как это представлено ниже."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'gradiend boost'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[17], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m clf \u001b[38;5;241m=\u001b[39m create_model(algs[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mgradiend boost\u001b[39m\u001b[38;5;124m\"\u001b[39m], \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mgradiend boost\u001b[39m\u001b[38;5;124m'\u001b[39m, x_train, y_train)\n",
+      "\u001b[1;31mKeyError\u001b[0m: 'gradiend boost'"
+     ]
+    }
+   ],
+   "source": [
+    "clf = create_model(algs[\"gradiend boost\"], 'gradiend boost', x_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Далее создадим набор данный x_test, на котором будет происходить тестирование модели."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>sex</th>\n",
+       "      <th>age</th>\n",
+       "      <th>height</th>\n",
+       "      <th>weight</th>\n",
+       "      <th>waisline</th>\n",
+       "      <th>sight_left</th>\n",
+       "      <th>sight_right</th>\n",
+       "      <th>hear_left</th>\n",
+       "      <th>hear_right</th>\n",
+       "      <th>SBP</th>\n",
+       "      <th>...</th>\n",
+       "      <th>HDL_chole</th>\n",
+       "      <th>LDL_chole</th>\n",
+       "      <th>triglyceride</th>\n",
+       "      <th>hemoglobin</th>\n",
+       "      <th>urine_protein</th>\n",
+       "      <th>serum_creatinine</th>\n",
+       "      <th>SGOT_AST</th>\n",
+       "      <th>SGOT_ALT</th>\n",
+       "      <th>gamma_GTP</th>\n",
+       "      <th>SMK_stat_type_cd</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>20</td>\n",
+       "      <td>180</td>\n",
+       "      <td>75</td>\n",
+       "      <td>91.0</td>\n",
+       "      <td>0.8</td>\n",
+       "      <td>0.8</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>128</td>\n",
+       "      <td>...</td>\n",
+       "      <td>18</td>\n",
+       "      <td>46</td>\n",
+       "      <td>63</td>\n",
+       "      <td>15.1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0.89</td>\n",
+       "      <td>19</td>\n",
+       "      <td>17</td>\n",
+       "      <td>37</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1 rows × 23 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   sex  age  height  weight  waisline  sight_left  sight_right  hear_left  \\\n",
+       "0    0   20     180      75      91.0         0.8          0.8          1   \n",
+       "\n",
+       "   hear_right  SBP  ...  HDL_chole  LDL_chole  triglyceride  hemoglobin  \\\n",
+       "0           1  128  ...         18         46            63        15.1   \n",
+       "\n",
+       "   urine_protein  serum_creatinine  SGOT_AST  SGOT_ALT  gamma_GTP  \\\n",
+       "0              4              0.89        19        17         37   \n",
+       "\n",
+       "   SMK_stat_type_cd  \n",
+       "0                 0  \n",
+       "\n",
+       "[1 rows x 23 columns]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d = {\n",
+    "    \"sex\": 0,\n",
+    "    \"age\": 20,\n",
+    "    \"height\": 180,\n",
+    "    \"weight\": 75,\n",
+    "    \"waisline\": 91.0,\n",
+    "    \"sight_left\": 0.8,\n",
+    "    \"sight_right\": 0.8,\n",
+    "    \"hear_left\": 1,\n",
+    "    \"hear_right\": 1,\n",
+    "    \"SBP\": 128,\n",
+    "    \"DBP\": 75,\n",
+    "    \"BLDS\": 466,\n",
+    "    \"tot_chole\": 70,\n",
+    "    \"HDL_chole\": 18,\n",
+    "    \"LDL_chole\": 46,\n",
+    "    \"triglyceride\": 63,\n",
+    "    \"hemoglobin\": 15.1,\n",
+    "    \"urine_protein\": 4,\n",
+    "    \"serum_creatinine\": 0.89,\n",
+    "    \"SGOT_AST\": 19,\n",
+    "    \"SGOT_ALT\": 17,\n",
+    "    \"gamma_GTP\": 37,\n",
+    "    \"SMK_stat_type_cd\": 0,\n",
+    "}\n",
+    "real_test = pd.DataFrame(data=d, index=[0])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "После обучения и создания тестового набора данных, получим предсказания от модели при помощи метода `predict_proba`, который вернет вероятности отнесения к каждому из классов. Получаем следующий результат:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(f'Вероятности отнесения к каждому из классов: {clf.predict_proba(real_test)}')\n",
+    "print(f'Таким образом данные были отнесены к классу: {clf.predict(real_test)}')"
+   ]
   }
  ],
  "metadata": {
@@ -575,7 +787,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
