Add final model test

--- a/Smoking and drinking classification/check.ipynb
+++ b/Smoking and drinking classification/check.ipynb
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -598,18 +598,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
-     "ename": "KeyError",
-     "evalue": "'gradiend boost'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[17], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m clf \u001b[38;5;241m=\u001b[39m create_model(algs[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mgradiend boost\u001b[39m\u001b[38;5;124m\"\u001b[39m], \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mgradiend boost\u001b[39m\u001b[38;5;124m'\u001b[39m, x_train, y_train)\n",
-      "\u001b[1;31mKeyError\u001b[0m: 'gradiend boost'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Обучение модели...\n",
+      "Обучение завершено!\n"
      ]
     }
    ],
@@ -626,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -654,7 +651,7 @@
        "      <th>age</th>\n",
        "      <th>height</th>\n",
        "      <th>weight</th>\n",
-       "      <th>waisline</th>\n",
+       "      <th>waistline</th>\n",
        "      <th>sight_left</th>\n",
        "      <th>sight_right</th>\n",
        "      <th>hear_left</th>\n",
@@ -704,8 +701,8 @@
        "</div>"
       ],
       "text/plain": [
-       "   sex  age  height  weight  waisline  sight_left  sight_right  hear_left  \\\n",
-       "0    0   20     180      75      91.0         0.8          0.8          1   \n",
+       "   sex  age  height  weight  waistline  sight_left  sight_right  hear_left  \\\n",
+       "0    0   20     180      75       91.0         0.8          0.8          1   \n",
        "\n",
        "   hear_right  SBP  ...  HDL_chole  LDL_chole  triglyceride  hemoglobin  \\\n",
        "0           1  128  ...         18         46            63        15.1   \n",
@@ -719,7 +716,7 @@
        "[1 rows x 23 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -730,7 +727,7 @@
     "    \"age\": 20,\n",
     "    \"height\": 180,\n",
     "    \"weight\": 75,\n",
-    "    \"waisline\": 91.0,\n",
+    "    \"waistline\": 91.0,\n",
     "    \"sight_left\": 0.8,\n",
     "    \"sight_right\": 0.8,\n",
     "    \"hear_left\": 1,\n",
@@ -750,7 +747,8 @@
     "    \"gamma_GTP\": 37,\n",
     "    \"SMK_stat_type_cd\": 0,\n",
     "}\n",
-    "real_test = pd.DataFrame(data=d, index=[0])"
+    "real_test = pd.DataFrame(data=d, index=[0])\n",
+    "real_test"
    ]
   },
   {
@@ -762,12 +760,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Вероятности отнесения к каждому из классов: [[0.46488547 0.5351145 ]]\n",
+      "Таким образом данные были отнесены к классу: [1]\n"
+     ]
+    }
+   ],
    "source": [
     "print(f'Вероятности отнесения к каждому из классов: {clf.predict_proba(real_test)}')\n",
     "print(f'Таким образом данные были отнесены к классу: {clf.predict(real_test)}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "В данном случае 0 класс - выпивающие люди, а 1 - непьющие. Ответ, полученный моделью полностью совпал с реальным положением вещей, поскольку пациент действительно является непьющим."
    ]
   }
  ],
@@ -787,7 +801,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
